concord_examples/tests/ui/removed_path_layer.stderr
error: `path ... {}` layers were removed in v2; use `scope name { path[...] ... }`
 --> tests/ui/removed_path_layer.rs:9:5
  |
9 |     path users {
  |     ^^^^
